--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   
   <h2>Introduction</h2>
   <p>
-    Welcome to the Configuration documentation for our software! This documentation provides information and instructions on how to use our software effectively.
+    Welcome to the Configuration documentation for our software!
   </p>
   
   <h2>Configuration</h2>
@@ -100,7 +100,7 @@
 
   <h2>Conclusion</h2>
   <p>
-    Thank you for using our starting manual! We hope this documentation has provided the necessary information to help you get started and make the most out of our software.
+    Thank you for using our starting manual! We hope this documentation has provided the necessary information to help you get started and make the most out of our documentaion.
   </p>
 </body>
 </html>
