--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cloudfare wildcard Documentation</title>
+  <title>Cloudflare wildcard Documentation</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
   </style>
 </head>
 <body>
-  <h1>Cloudfare Wildcard SSL Documentation</h1>
+  <h1>Cloudflare Wildcard SSL Documentation</h1>
   
   <h2>Introduction</h2>
   <p>
@@ -44,21 +44,21 @@
   
   <h2>Configuration</h2>
   <p>
-    To use wildcard in cloudfare, follow these steps:
+    To use wildcard in Cloudflare, follow these steps:
   </p>
   <ol>
-    <li>First we must configure cloudfare as a dns.</li>
+    <li>First we must configure Cloudflare as a dns.</li>
     <li>then we activate wildcard ssl.</li>
   </ol>
   
-  <h2>Cloudfare DNS configuration:</h2>
+  <h2>Cloudflare DNS configuration:</h2>
   <p>
-    To use CLoudfare DNS, follow these steps:
+    To use cloudflare DNS, follow these steps:
   </p>
   <ol>
     <li>First find the domain registrar for our case it is amazon route 53.</li>
-    <li>then go to cloudfare dashboard and you will see add site.</li>
-    <li>follow the add site documentaion from cloudfare <a href="https://developers.cloudflare.com/dns/zone-setups/full-setup/setup"><code>https://developers.cloudflare.com/dns/zone-setups/full-setup/setup</code></a>
+    <li>then go to cloudflare dashboard and you will see add site.</li>
+    <li>follow the add site documentaion from cloudflare <a href="https://developers.cloudflare.com/dns/zone-setups/full-setup/setup"><code>https://developers.cloudflare.com/dns/zone-setups/full-setup/setup</code></a>
       for detailed instructions on specific features.
     </li>
     <!-- <li><a href="https://developers.cloudflare.com/dns/zone-setups/full-setup/setup"><code>https://developers.cloudflare.com/dns/zone-setups/full-setup/setup</code></a></li> -->
@@ -76,7 +76,7 @@
     &emsp;<a href="https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/domain-name-servers-glue-records.html#domain-name-servers-glue-records-adding-changing">https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/domain-name-servers-glue-records.html#domain-name-servers-glue-records-adding-changing</a>      
   </code>
   
-  <h2>Cloudfare wildcard configuration:</h2>
+  <h2>Cloudflare wildcard configuration:</h2>
   <p>
     Our software allows for configuration settings to customize your experience. To configure the software, follow these steps:
   </p>
@@ -165,7 +165,7 @@
       </div>
       </div>
 
-      <p>for creating cloudfare restricted API Token follow the links below</p>
+      <p>for creating Cloudflare restricted API Token follow the links below</p>
 
       <code>
         <a href="https://developers.cloudflare.com/fundamentals/api/get-started/create-token/">https://developers.cloudflare.com/fundamentals/api/get-started/create-token/</a>
@@ -174,7 +174,7 @@
       <p></p>
 
       <code>
-        Use the recommended artcicle below to create cloudfare restricted API Token
+        Use the recommended artcicle below to create Cloudflare restricted API Token
         <br>
         <a href="https://www.cyberciti.biz/faq/issue-lets-encrypt-wildcard-certificate-with-acme-sh-and-cloudflare-dns/">https://www.cyberciti.biz/faq/issue-lets-encrypt-wildcard-certificate-with-acme-sh-and-cloudflare-dns/</a>
       <br>
